# evaluatio-ai-email-generation

./: README.md  emails.db  env.example  main.py  pyproject.toml
app/: main.py  schemas.py
app/api/: routes.py
app/core/: llm.py  llm2.py
app/db/: models.py  session.py
app/services/: email_service.py
evaluation/: evaluation_report.csv  evaluation_report.json  evaluation_report1.csv  evaluation_report1.json  evaluation_report2.csv  evaluation_report2.json  metrics.py  runner.py  test_cases.json
